--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -45,7 +45,7 @@
     display: inline-block;
     width: 24px;
     height: 24px;
-    background-image: url(../images/icon/Facebookface.png);
+    background-image: url(../images/icon/Facebookface.svg);
     background-position: center;
     background-repeat: no-repeat;
     margin-right: 10px;
@@ -60,7 +60,7 @@
     display: inline-block;
     width: 24px;
     height: 24px;
-    background-image: url(../images/icon/insta.png);
+    background-image: url(../images/icon/insta.svg);
     background-position: center;
     background-repeat: no-repeat;
     transition: all 0.3s;
