--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -82,7 +82,7 @@
     height: 50px;
     width: 50px;
     
-    background-image: url(../images/arrow/arrow-ticket.png);
+    background-image: url(../images/arrow/arrow-ticket.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: #1a5a4c;
