--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -57,6 +57,11 @@
     height: 50px;
     padding: 18px 24px;
 
+    &:focus {
+      outline-color: #f14a27;
+      color: #f14a27;
+    }
+
     @include onTablet {
       height: 70px;
       margin-right: 16px;
@@ -66,12 +71,13 @@
   &__button {
     box-sizing: border-box;
     width: 50px;
+    border: 1px solid #f14a27;
     cursor: pointer;
 
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
     }
 
     @include onTablet {
@@ -83,6 +89,7 @@
       width: 100%;
       height: 100%;
       background-color: #f14a27;
+      border: 1px solid #f14a27;
       background-image: url(../images/arrow/arrow-black.svg);
       background-position: center;
       background-repeat: no-repeat;
