--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -71,7 +71,9 @@
   }
 
   &__info {
-    display: flex;
+    display: grid;
+    grid-template-columns: 40% auto;
+    word-wrap: break-word;
     column-gap: 20px;
   }
 
@@ -96,6 +98,16 @@
   &__contacts-text {
     font-size: 14px;
     line-height: 150%;
+  }
+
+  &__contacts-link {
+    text-decoration: none;
+    color: #0f0e08;
+
+    &:hover {
+      color: blue;
+      border-bottom: 1px solid blue;
+    }
   }
 
   &__arrow {
