--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,42 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  color: $colorBlack;
+
+  margin: 0;
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  font-size: 36px;
+  line-height: 100%;
+  color: $colorBlack;
+
+  margin: 0;
+}
+
+%actual-text-style {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+%schedule-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+
+  color: #fff;
+}
+
+%schedule-text-black {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+
+  color: $colorBlack;
 }
