--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/extends";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/section.scss";
+@import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/form.scss";
+@import "./blocks/subscribe.scss";
