restyle description, change copyrate date

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,33 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+.author {
+  &::before {
+    transition: 0.5s;
+    display: inline-block;
+    position: absolute;
+    z-index: 2;
+    right: 2rem;
+    bottom: 2rem;
+    @include mon;
+    font-size: 0.8rem;
+    font-weight: bold;
+    content: attr(data-author);
+    color: $green;
+    opacity: 0;
+    text-shadow: 0 0 5px #fff;
+  }
+
+  &:hover {
+    &::before {
+      opacity: 1;
+      text-shadow: 0 0 5px #fff,
+        -2px 2px 10px #fff,
+        2px -2px 10px #fff,
+        -2px -2px 10px #fff,
+        2px 2px 10px #fff;
+      font-size: 1rem;
+    }
+  }
+}
