Museum Finish (fixed problem)

--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe {
-  max-width: 1440px;
+  max-width: 100%;
   background-image: url(../images/footer.jpg);
   background-position: center;
   background-repeat: no-repeat;
