--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -130,6 +130,11 @@
       line-height: 21px;
       color: $mainColor;
       text-decoration: none;
+      transition: 0.4s;
+
+      &:hover {
+        color: #f14a27;
+      }
     }
   }
 
