museum_next_commit-2

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  text-decoration: none;
 
   @include onDesktop {
     padding-left: 200px;
@@ -9,24 +10,20 @@
 
   &__box {
     width: 230px;
-    background-color: $colorWhite;
-    border: 1px solid $colorGreen;
-    cursor: pointer;
-    transition-duration: 0.5s;
-
-    @include onTablet {
-      width: 200px;
-    }
-  }
-
-  &__text {
-    text-decoration: none;
     color: $colorBlack;
     font-family: $fonts-2;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    @include hover(color, $colorRed);
+    background-color: $colorWhite;
+    border: 1px solid $colorGreen;
+    cursor: pointer;
+    @include hover(color, $colorWhite);
+    @include hover(background-color, $colorGreen);
+    
+    @include onTablet {
+      width: 200px;
+    }
   }
 
   &__angle {
@@ -36,6 +33,7 @@
     border: none;
     cursor: pointer;
     @include hover(background-color, $colorRed);
+    
 
     @include onTablet {
       width: 70px;
