--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -63,11 +63,12 @@
   &__paintings-desktop {
     display: none;
     @include onDesktop {
-      display: initial;
+      display: flex;
+      justify-content: center;
     }
   }
 
   &__image-desktop {
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.07));
   }
 }
