--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -13,6 +13,22 @@
     gap: 30px;
   }
 
+  &--tablet {
+    display: block;
+
+    @include onTablet {
+      display: grid;
+    }
+  }
+
+  &--desktop {
+    display: block;
+
+    @include onDesktop {
+      display: grid;
+    }
+  }
+
   &__item {
     @include onTablet {
       @for $start from 1 through 6 {
