Gallery section with swiper was added

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -29,9 +29,17 @@
     width: 670px;
     height: 520px;
 
+    overflow: hidden;
+
+    transition: box-shadow $image-transition;
+
     @include onTablet {
       width: 100%;
       margin-bottom: 40px;
+    }
+
+    &:hover {
+      @include box-shadow;
     }
 
     &--1 {
@@ -60,6 +68,12 @@
     height: 100%;
 
     object-fit: cover;
+
+    transition: transform $image-transition;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__article {
