--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -15,22 +15,39 @@
 
   border: 1px solid $green;
 
-  transition: transform $smooth-transition;
+  transition: transform $smooth-transition, box-shadow $smooth-transition;
 
   &:hover {
-    transform: translateX(5%);
+    transform: translate(2%, -2%);
+    @include button-shadow;
+  }
+
+  &:active {
+    transform: translate(2%, 0);
+    box-shadow: $green 0 0 0 2px inset;
   }
 
   &__text {
     display: inline-block;
 
     width: 200px;
+    height: 100%;
 
     color: $dark;
     font-weight: 500;
     font-size: 16px;
-    line-height: 16px;
+    line-height: 68px;
     text-transform: uppercase;
+
+    transition: background-color $smooth-transition,
+      color $smooth-transition,
+      border-right $smooth-transition;
+  }
+
+  &:hover > &__text {
+    background-color: $green;
+    color: $white;
+    border-right: 2px solid $white;
   }
 
   &__arrow {
