--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -78,11 +78,20 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
 
     width: 55%;
 
+    overflow: hidden;
+
+    transition: box-shadow $image-transition;
+
     @include onTablet {
       width: 50%;
+    }
+
+    &:hover {
+      @include box-shadow;
     }
   }
 
@@ -90,7 +99,7 @@
     position: absolute;
     top: 15px;
     left: 60px;
-    // z-index: -1;
+    z-index: 2;
 
     width: 70px;
   }
@@ -100,17 +109,20 @@
   }
 
   &__image {
-    position: absolute;
-    z-index: -1;
-
     width: 100%;
     max-height: 655px;
+
+    object-fit: cover;
+    object-position: bottom;
+
+    transition: transform $image-transition;
 
     @include onTablet {
       max-height: 384px;
     }
 
-    object-fit: cover;
-    object-position: bottom;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
