--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -28,3 +28,13 @@
   max-width: $tablet-max-width;
   padding: 0 $tablet-side-padding;
 }
+
+@mixin box-shadow {
+  box-shadow: 3px 3px $green, -0.4em 0 0.4em $grey;
+}
+
+@mixin button-shadow {
+  box-shadow: $green 0 0 0 2px inset,
+  $white -5px 5px 0 -2px, $light-grey -5px 5px,
+  $white -10px 10px 0 -2px, $grey -10px 10px;
+}
