--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,6 +5,7 @@ $desktop-side-padding: 55px;
 $tablet-side-padding: 39px;
 
 $smooth-transition: 0.3s;
+$image-transition: 0.5s;
 
 $black: #000;
 $white: #fff;
@@ -12,4 +13,5 @@ $dark: #0f0e08;
 $green: #1a5a4c;
 $grey: #687480;
 $light-grey: #4e4e4e;
+$grey-2: #f9f9f9;
 $red: #f14a27;
