Implemented slider with swipes

--- a/src/styles/blocks/scroll.scss
+++ b/src/styles/blocks/scroll.scss
@@ -1,17 +1,24 @@
 .scroll {
   display: flex;
-  gap: 24px;
+  gap: 8px;
   width: min-content;
   margin: 0 auto;
 
   &__point {
+    
     width: 9px;
     height: 9px;
     border-radius: 50%;
 
     background-color: #e0e0e0;
 
-    cursor: pointer;
+    
+    &-container {
+      padding: 8px;
+      border-radius: 50%;
+      background-color: transparent;
+      cursor: pointer;
+    }
 
     &--active {
       background-color: $c-back-sidebar;
