--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/event.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/carousel.scss";
 @import "./blocks/scroll.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/form.scss";
