--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,8 +1,14 @@
 $transition-time: 0.5s;
 $page-section-font-size: 28px;
 $page-section-font-size-on-tablet: 36px;
+
 $c-title: #0f0e08;
 $c-back-sidebar: #1a5a4c;
 $c-email-button: #f14a27;
 $c-text-on-dark: #fff;
 $c-text-hint: #687480;
+
+$carousel-height: 400px;
+$carousel-width: 1000px;
+$carousel-item-height: 180px;
+$carousel-item-width: 110px;
