--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,25 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/extends";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
+@import "./blocks/grid.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/container.scss";
+@import "./blocks/tickets.scss";
+@import "./blocks/events.scss";
+@import "./blocks/developments.scss";
+@import "./blocks/classic.scss";
+@import "./blocks/galery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/button.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/schedule.scss";
+
+* {
+  box-sizing: border-box;
 }
