Contacts and footer sections was added

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -133,25 +133,11 @@
 
     margin-bottom: 20px;
 
-    color: $white;
-    font-size: 14px;
-    line-height: 21px;
-
-    @include onTablet {
-      font-size: 12px;
-      line-height: 18px;
-    }
+    @include small-text--white;
   }
 
   &__working-hours,
   &__weekends {
-    color: $white;
-    font-size: 14px;
-    line-height: 21px;
-
-    @include onTablet {
-      font-size: 12px;
-      line-height: 18px;
-    }
+    @include small-text--white;
   }
 }
