--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,10 @@
 
   &__body {
     margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__header {
@@ -21,6 +25,14 @@
 
     @include onTablet {
       margin-bottom: 88px;
+    }
+
+    &:last-child {
+      margin-bottom: 40px;
+
+      @include onTablet {
+        margin-bottom: 30px;
+      }
     }
   }
 }
