--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,6 +6,7 @@ $tablet-side-padding: 39px;
 
 $smooth-transition: 0.3s;
 $image-transition: 0.5s;
+$hovered-red-text-transition: color $smooth-transition, transform $smooth-transition;
 
 $black: #000;
 $white: #fff;
