--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,5 @@
 @import "./blocks/button.scss";
 @import "./blocks/events.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/contact-form.scss";
+@import "./blocks/footer.scss";
