--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,23 +3,27 @@
   top: 0;
   left: 0;
   right: 0;
-
-  background-color: $c-green;
-  height: 400px;
-  color: $c-white;
+  height: 100%;
   transform: translateY(-100%);
+  background-color: rgba(0, 0, 0, 0.7);
   transition: transform 0.3s;
 
   &:target {
     transform: translate(0);
   }
 
-  @include onTablet {
-    height: 225px;
-  }
+  &__green {
+    background-color: $c-green;
+    height: 400px;
+    color: $c-white;
 
-  @include onDesktop {
-    height: 233px;
+    @include onTablet {
+      height: 225px;
+    }
+
+    @include onDesktop {
+      height: 233px;
+    }
   }
 
   &__content {
@@ -69,7 +73,7 @@
     }
 
     @include onDesktop {
-      width: 231px;
+      width: 367px;
       column-gap: 31px;
       row-gap: 24px;
     }
@@ -79,6 +83,10 @@
     width: 100px;
     list-style: none;
     @include hover (scale, 1.05);
+
+    @include onDesktop {
+      width: 168px;
+    }
   }
 
   &__link {
