--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -70,9 +70,7 @@
     display: inline-block;
     color: inherit;
     text-decoration: none;
-   
-
-    @include hover(font-weight, 600);
+    @include hover(text-decoration, underline);
   }
 
   &__arrow {
@@ -117,7 +115,9 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
-    @include hover(font-weight, 600);
+    border-bottom: 1px solid transparent;
+    width: max-content;
+    @include hover(text-decoration, underline);
 
     &:first-child {
       margin-bottom: 20px;
