--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  &__logo-container{
+  &__logo-container {
     grid-column: 1 / 2;
     display: flex;
     flex-direction: column;
@@ -12,6 +12,11 @@
 
   &__logo {
     width: 100%;
+    transition: transform $smooth-transition;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__social-box {
@@ -23,6 +28,12 @@
 
   &__social-icon {
     height: 25px;
+    transition: transform $smooth-transition;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__text {
