--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -29,22 +29,28 @@
   padding: 0 $tablet-side-padding;
 }
 
+@mixin grid-mobile {
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  padding: 0 $mobile-side-padding;
+}
+
 @mixin box-shadow {
   box-shadow: 3px 3px $green, -0.4em 0 0.4em $grey;
 }
 
 @mixin button-shadow {
-  /* stylelint-disable max-line-length */
+  /* stylelint-disable-next-line max-line-length */
   box-shadow: $green 0 0 0 2px inset, $white -5px 5px 0 -2px, $light-grey -5px 5px, $white -10px 10px 0 -2px, $grey -10px 10px;
 }
 
 @mixin red-button-shadow {
-  /* stylelint-disable max-line-length */
+  /* stylelint-disable-next-line max-line-length */
   box-shadow: $red 0 0 0 2px inset, $black -5px 5px 0 -2px, $light-grey -5px 5px, $black -10px 10px 0 -2px, $grey -10px 10px;
 }
 
 @mixin grey-input-shadow {
-  /* stylelint-disable max-line-length */
+  /* stylelint-disable-next-line max-line-length */
   box-shadow: $black -5px 5px 0 -2px, $light-grey -5px 5px, $black -10px 10px 0 -2px, $grey -10px 10px;
 }
 
@@ -67,6 +73,11 @@
   @include onTablet {
     font-size: 12px;
     line-height: 18px;
+  }
+
+  @include onMobile {
+    font-size: 14px;
+    line-height: 21px;
   }
 }
 
