--- a/src/styles/blocks/contact-form.scss
+++ b/src/styles/blocks/contact-form.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
 
+  /* stylelint-disable-next-line max-line-length */
   background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("../../src/images/contact-form-image.png") center/cover no-repeat;
 
   @include onTablet {
@@ -63,11 +64,24 @@
       width: 370px;
     }
 
+    @include onMobile {
+      width: 230px;
+      height: 50px;
+      padding: 18px 24px;
+    }
+
     &::placeholder {
       color: $light-grey;
       @extend %montserrat-bold;
       font-size: 14px;
       font-weight: 400;
+    }
+
+    &:hover {
+      transform: translate(2%, -2%);
+      @include grey-input-shadow;
+
+      outline: 0;
     }
 
     &:focus {
@@ -87,6 +101,11 @@
 
     transition: transform $smooth-transition, box-shadow $smooth-transition;
 
+    @include onMobile {
+      width: 50px;
+      height: 50px;
+    }
+
     &::after {
       content: "\203A";
       @extend %montserrat-bold;
@@ -95,6 +114,11 @@
       line-height: 68px;
 
       transition: color $smooth-transition;
+
+      @include onMobile {
+        font-size: 24px;
+        line-height: 48px;
+      }
     }
 
     &:hover {
