--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -9,6 +9,12 @@
       grid-template-rows: repeat(4, auto);
       row-gap: 0;
     }
+
+    @include onMobile {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 60px;
+    }
   }
 
   &__title {
@@ -23,6 +29,15 @@
     @include onTablet {
       margin-bottom: 48px;
     }
+
+    @include onMobile {
+      grid-column: 1 / 3;
+
+      font-size: 36px;
+      line-height: 36px;
+      margin-bottom: 40px;
+      text-align: center;
+    }
   }
 
   &__image-box {
@@ -36,6 +51,11 @@
     @include onTablet {
       width: 100%;
       margin-bottom: 40px;
+    }
+
+    @include onMobile {
+      height: 210px;
+      margin-bottom: 16px;
     }
 
     &:hover {
@@ -92,6 +112,12 @@
       }
     }
 
+    @include onMobile {
+      margin-bottom: 60px;
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: 1fr;
+    }
+
     &--1 {
       grid-row: 1 / 2;
       grid-column: 9 / 13;
@@ -125,6 +151,12 @@
     text-transform: uppercase;
     color: $grey;
 
+    @include onMobile {
+      margin-bottom: 16px;
+      font-size: 14px;
+      line-height: 14px;
+    }
+
     &--lecture {
       grid-row: 1 / 2;
       grid-column: 2 / 3;
@@ -139,6 +171,12 @@
     line-height: 14px;
     font-weight: 700;
     color: $green;
+
+    @include onMobile {
+      grid-column: 2 / 3;
+      font-size: 14px;
+      line-height: 14px;
+    }
 
     &--lecture {
       grid-row: 1 / 2;
@@ -157,6 +195,12 @@
     line-height: 36px;
     color: $dark;
 
+    @include onMobile {
+      grid-column: 1 / 3;
+      font-size: 26px;
+      line-height: 26px;
+    }
+
     &::after {
       content: "";
       display: inline-block;
@@ -168,6 +212,11 @@
       background-color: $red;
 
       transform: translateY(-25%);
+
+      @include onMobile {
+        width: 12px;
+        height: 12px;
+      }
     }
   }
 
@@ -179,6 +228,10 @@
     line-height: 24px;
     font-weight: 300;
     color: $light-grey;
+
+    @include onMobile {
+      grid-column: 1 / 3;
+    }
   }
 
   &__lecture-image-box {
