--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,15 @@
 .header {
   &__grid {
     grid-template-rows: repeat(3, 1fr);
-    height: 655px;
+    height: $desktop-header-heigth;
 
     @include onTablet {
-      height: 384px;
+      height: $tablet-header-heigth;
+    }
+
+    @include onMobile {
+      grid-template-rows: 1fr;
+      height: max-content;
     }
   }
 
@@ -20,6 +25,16 @@
       line-height: 64px;
     }
 
+    @include onMobile {
+      font-size: 45px;
+      line-height: 45px;
+      text-align: center;
+
+      grid-column: 1 / 3;
+      padding-top: #{$mobile-header-heigth + 20};
+      margin-bottom: 20px;
+    }
+
     @extend %montserrat-bold;
     color: $black;
     font-size: 72px;
@@ -30,6 +45,12 @@
   &__button {
     position: relative;
     top: 20%;
+
+    @include onMobile {
+      grid-column: 1 / 3;
+      position: initial;
+      margin: 0 auto;
+    }
   }
 
   &__side-comment {
@@ -78,51 +99,48 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: -1;
 
     width: 55%;
 
     overflow: hidden;
 
-    transition: box-shadow $image-transition;
-
     @include onTablet {
       width: 50%;
     }
 
-    &:hover {
-      @include box-shadow;
+    @include onMobile {
+      width: 100%;
     }
   }
 
-  &__logo-link {
+  &__logo {
     position: absolute;
     top: 15px;
     left: 60px;
     z-index: 2;
 
     width: 70px;
-  }
 
-  &__logo {
-    width: 100%;
+    @include onMobile {
+      width: 50px;
+      left: 100px;
+    }
   }
 
   &__image {
     width: 100%;
-    max-height: 655px;
+    max-height: $desktop-header-heigth;
 
     object-fit: cover;
     object-position: bottom;
 
-    transition: transform $image-transition;
-
     @include onTablet {
-      max-height: 384px;
+      max-height: $tablet-header-heigth;
     }
 
-    &:hover {
-      transform: scale(1.1);
+    @include onMobile {
+      max-height: $mobile-header-heigth;
     }
   }
 }
