--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -13,6 +13,11 @@
       padding: $tablet-side-padding 0 0;
     }
 
+    @include onMobile {
+      height: 400px;
+      padding: $mobile-side-padding 0 0;
+    }
+
     transform: translateY(-100%);
     transition: transform $smooth-transition;
 
@@ -22,6 +27,22 @@
       position: absolute;
       z-index: 3;
       transform: translateY(0);
+    }
+  }
+
+  &__grid-item {
+    grid-column: 1 / 6;
+
+    display: flex;
+    justify-content: space-between;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+    }
+
+    @include onMobile {
+      grid-column: 1 / 3;
+      margin-bottom: 24px;
     }
   }
 
@@ -50,6 +71,13 @@
     @include onTablet {
       left: $tablet-side-padding;
     }
+
+    @include onMobile {
+      width: 30px;
+      height: 20px;
+      top: 25px;
+      left: $mobile-side-padding;
+    }
   }
 
   &__icon {
@@ -60,32 +88,30 @@
   }
 
   &__close-link {
-    grid-column: 1 / 2;
-
+    display: flex;
     width: 25px;
     height: 25px;
 
     padding: 5px;
+    margin-right: 100px;
+
+    @include onTablet {
+      margin-right: 40px;
+    }
   }
 
   &__close-icon {
-    width: 100%;
-
     object-fit: contain;
     object-position: center;
   }
 
   &__list {
-    grid-column: 2 / 6;
-
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, auto);
     grid-auto-flow: column;
 
-    @include onTablet {
-      grid-column: 2 / 4;
-    }
+    width: 100%;
   }
 
   &__item {
@@ -109,6 +135,26 @@
       font-size: 16px;
       line-height: 16px;
     }
+
+    &:after {
+      content: "";
+      background: $white;
+      display: block;
+      position: relative;
+      bottom: -3px;
+      left: 0;
+      width: 0;
+      height: 1px;
+      transition: all $smooth-transition ease-in-out;
+    }
+
+    &:hover::after {
+      width: 100%;
+
+      @include onMobile {
+        width: 0;
+      }
+    }
   }
 
   &__schedule {
@@ -125,6 +171,18 @@
       grid-column: 4 / 7;
       padding-left: 40px;
     }
+
+    @include onMobile {
+      display: flex;
+      flex-direction: column;
+
+      grid-column: 1 / 3;
+      padding-left: 0;
+      padding-top: 24px;
+      border-left: none;
+      border-top: 1px solid $white;
+      width: 100%;
+    }
   }
 
   &__schedule-title {
@@ -139,5 +197,9 @@
   &__working-hours,
   &__weekends {
     @include small-text--white;
+
+    @include onMobile {
+      margin-bottom: 20px;
+    }
   }
 }
