--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,11 +12,28 @@
     }
   }
 
+  &__cover {
+    display: none;
+  }
+
+  .page__body--with-menu &__cover {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+  }
+
   &__header {
     margin-bottom: 200px;
 
     @include onTablet {
       margin-bottom: 88px;
+    }
+
+    @include onMobile {
+      margin-bottom: 70px;
     }
   }
 
@@ -25,6 +42,10 @@
 
     @include onTablet {
       margin-bottom: 88px;
+    }
+
+    @include onMobile {
+      margin-bottom: 70px;
     }
 
     &:last-child {
