Mobile addaptive footer

--- a/src/styles/blocks/contact-form.scss
+++ b/src/styles/blocks/contact-form.scss
@@ -25,6 +25,10 @@
     @include onTablet {
       width: 470px;
     }
+
+    @include onMobile {
+      padding: 0 $mobile-side-padding;
+    }
   }
 
   &__title {
@@ -33,6 +37,11 @@
     font-size: 48px;
     line-height: 48px;
     margin-bottom: 16px;
+
+    @include onMobile {
+      font-size: 36px;
+      text-align: center;
+    }
   }
 
   &__subtitle {
@@ -44,6 +53,13 @@
     @include onTablet {
       margin-bottom: 64px;
     }
+
+    @include onMobile {
+      line-height: 27px;
+      text-align: center;
+
+      margin-bottom: 50px;
+    }
   }
 
   &__container {
@@ -51,6 +67,10 @@
     justify-content: space-between;
 
     width: 100%;
+
+    @include onMobile {
+      max-width: 320px;
+    }
   }
 
   &__input {
