--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -35,8 +35,9 @@
 
       font-size: 36px;
       line-height: 36px;
-      margin-bottom: 40px;
       text-align: center;
+
+      margin-bottom: 40px;
     }
   }
 
@@ -113,9 +114,10 @@
     }
 
     @include onMobile {
-      margin-bottom: 60px;
       grid-template-columns: repeat(2, auto);
       grid-template-rows: 1fr;
+
+      margin-bottom: 60px;
     }
 
     &--1 {
@@ -153,6 +155,7 @@
 
     @include onMobile {
       margin-bottom: 16px;
+
       font-size: 14px;
       line-height: 14px;
     }
@@ -160,6 +163,14 @@
     &--lecture {
       grid-row: 1 / 2;
       grid-column: 2 / 3;
+
+      @include onMobile {
+        grid-column: 1 / 2;
+
+        font-size: 14px;
+        line-height: 14px;
+        text-align: center;
+      }
     }
   }
 
@@ -174,6 +185,7 @@
 
     @include onMobile {
       grid-column: 2 / 3;
+
       font-size: 14px;
       line-height: 14px;
     }
@@ -181,6 +193,13 @@
     &--lecture {
       grid-row: 1 / 2;
       grid-column: 4 / 6;
+
+      @include onMobile {
+        grid-column: 2 / 3;
+
+        font-size: 14px;
+        line-height: 14px;
+      }
     }
   }
 
@@ -197,6 +216,7 @@
 
     @include onMobile {
       grid-column: 1 / 3;
+
       font-size: 26px;
       line-height: 26px;
     }
@@ -242,12 +262,16 @@
     width: 100%;
     max-height: 550px;
 
+    object-fit: cover;
+    object-position: 100% 50%;
+
     @include onTablet {
       max-height: 390px;
     }
 
-    object-fit: cover;
-    object-position: 100% 50%;
+    @include onMobile {
+      max-height: 210px;
+    }
   }
 
   &__lecture-container {
@@ -265,6 +289,16 @@
 
     background-color: $white;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @include onMobile {
+      top: -70px;
+      margin: 0 $mobile-side-padding -50px;
+      padding: 20px 0;
+
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, auto);
+      column-gap: 0;
+    }
   }
 
   &__lecture-title {
@@ -275,5 +309,13 @@
     font-size: 36px;
     line-height: 36px;
     color: $dark;
+
+    @include onMobile {
+      grid-column: 1 / 3;
+
+      font-size: 26px;
+      line-height: 26px;
+      text-align: center;
+    }
   }
 }
