--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -20,6 +20,16 @@
     @include onTablet {
       margin-bottom: 48px;
     }
+
+    @include onMobile {
+      grid-column: 1 / 3;
+
+      font-size: 36px;
+      line-height: 36px;
+      text-align: center;
+
+      margin-bottom: 40px;
+    }
   }
 
   &__image-box {
@@ -81,10 +91,20 @@
       width: 100%;
       height: 600px;
     }
+
+    @include onMobile {
+      grid-column: 1 / 3;
+
+      height: 460px;
+    }
   }
 
   &__swiper-slide {
     padding-bottom: 60px;
+
+    @include onMobile {
+      padding-bottom: 40px;
+    }
   }
 }
 
