--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -44,17 +44,15 @@
   }
 
   &__facebook {
-    background-image: url(./../images/icons/Facebook.svg);
     width: 12px;
     height: 24px;
-    @include hover(background-image, url(./../images/icons/Facebook-hover.svg));
+    @include hover(fill, $c-red);
   }
 
   &__instagram {
-    background-image: url(./../images/icons/instagram.svg);
     width: 24px;
     height: 24px;
-    @include hover(background-image, url(./../images/icons/instagram-hover.svg));
+    @include hover(fill, $c-red);
   }
 
   &__contacts {
@@ -105,7 +103,6 @@
   }
 
   &__list {
-
     margin: 0;
     padding: 0;
   }
