--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -68,6 +68,7 @@
     border: none;
     outline: none;
     padding-left: 28px;
+    @include hover(border, 1px solid $c-gray);
 
     &::placeholder {
       color: $c-gray;
