--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
 }
+
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/button.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/event.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/last.scss";
+@import "./blocks/footer.scss";
