--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -68,7 +68,7 @@
     display: inline-block;
     color: inherit;
     text-decoration: none;
-    @include hover(text-decoration, underline);
+    @include hover(color, $c-red);
   }
 
   &__arrow {
@@ -114,7 +114,7 @@
     line-height: 14px;
     border-bottom: 1px solid transparent;
     width: max-content;
-    @include hover(text-decoration, underline);
+    @include hover(color, $c-red);
 
     &:first-child {
       margin-bottom: 20px;
