Added hover and fixed text

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   height: max-content;
-  padding: 0 20px;
+  padding: 0;
   margin: 0 auto;
   
   @include onTablet {
@@ -22,5 +22,11 @@
     @include onTablet {
       display: flex;
     }
+  }
+
+  &--mobile-padding {
+    @include onMobile {
+      padding: 0 20px;
+    };
   }
 }
