--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -48,6 +48,7 @@
     position: absolute;
     top: 33px;
     left: 20px;
+    transition: all 0.3s;
 
     @include onTablet {
       top: 45px;
@@ -56,6 +57,10 @@
 
     @include onDesktop {
       left: 55px;
+    }
+
+    &:hover {
+      transform: scale(1.2);
     }
   }
 
@@ -68,6 +73,7 @@
     height: 61px;
     margin-top: 9px;
     margin-left: 132px;
+    transition: all 0.3s;
 
     @include onTablet {
       width: 220px;
@@ -77,6 +83,10 @@
 
     @include onDesktop {
       width: 170px;
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 
@@ -147,6 +157,11 @@
       background-size: cover;
       width: 50px;
       height: 50px;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 
