--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -39,7 +39,9 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 280px;
+    // width: 280px;
+    // width: 100%;
+    justify-content: space-between;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     padding-bottom: 24px;
    
@@ -62,12 +64,17 @@
     display: inline-block;
     width: 13px;
     height: 13px;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__list {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   &__items {
@@ -93,6 +100,11 @@
 
     color: #fff;
     text-decoration: none;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onDesktop {
       font-size: 22px;
