--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -123,7 +123,7 @@
       line-height: 100%;
   
       color: #0f0e08;
-      margin-top: 10px;
+      margin-top: 15px;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -142,6 +142,11 @@
 
       @include onTablet {
         font-size: 36px;
+        margin-top: 30px;
+      }
+
+      @include onDesktop{
+        margin-top: 32px;
       }
     }
 
@@ -153,6 +158,10 @@
 
       color: #4e4e4e;
       margin-top: 10px;
+
+      @include onTablet {
+        margin-top: 15px;
+      }
     }
   }
 
