new changes were added

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -20,6 +20,23 @@
     max-width: none;
   }
 
+  // &--lection {
+  //   background-image: url(../images/3.jpg);
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  //   background-size: contain;
+  //   height: 210px;
+  //   width: 100%;
+
+  //   @include onTablet {
+  //     height: 390px;
+  //   }
+
+  //   @include onDesktop {
+  //     height: 550px;
+  //   }
+  // }
+
   &--last {
     margin: 0;
     padding: 0;
