--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -5,28 +5,13 @@
     margin: 0 auto;
     margin-bottom: 20px;
 
+    @include onTablet {
+      height: 390px;
+    }
+
     @include onDesktop {
       height: 550px;
-
     }
-  }
-
-  &__title {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: #687480;
-  }
-
-  &__date {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 150%;
-    color: $colorGreen;
   }
 
   &__text {
@@ -40,7 +25,7 @@
     background-color: $colorWhite;
     border: 1px solid transparent;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-    transform: translateY(-40%);
+    transform: translateY(-50%);
 
     @include onTablet {
       width: 80%;
@@ -63,23 +48,52 @@
 
       @include onTablet {
         padding-top: 44px;
-        padding-bottom: 44px;
         gap: 140px;
       }
 
       @include onDesktop {
         padding-top: 44px;
-        padding-bottom: 64px;
         gap: 140px;
       }
     }
   }
 
+  &__title {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+
+    @include onTablet {
+      font-size: 14px;
+    }
+
+    @include onDesktop {
+      font-size: 14px;
+    }
+  }
+
+  &__date {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: $colorGreen;
+
+    @include onTablet {
+      font-size: 14px;
+    }
+
+    @include onDesktop {
+      font-size: 14px;
+    }
+  }
+
   &__name {
     font-family: "Montserrat", sans-serif;
-    font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 28px;
     line-height: 100%;
     color: $colorBlack;
     padding-bottom: 20px;
