--- a/src/styles/blocks/last.scss
+++ b/src/styles/blocks/last.scss
@@ -21,7 +21,6 @@
       margin: 0 auto;
       text-align: center;
       font-family: "Montserrat", sans-serif;
-      font-style: normal;
       font-weight: 700;
       font-size: 36px;
       line-height: 100%;
@@ -35,8 +34,6 @@
     &-subtitle {
       padding-bottom: 50px;
       font-family: "IBM Plex Sans", sans-serif;
-      font-style: normal;
-      font-weight: 400;
       font-size: 18px;
       line-height: 150%;
       text-align: center;
@@ -50,8 +47,6 @@
       height: 50px;
       background-color: $colorWhite;
       font-family: "Montserrat", sans-serif;
-      font-style: normal;
-      font-weight: 400;
       font-size: 14px;
       line-height: 100%;
       color: #687480;
@@ -80,7 +75,7 @@
       padding: 0;
       width: 50px;
       height: 50px;
-      background-color: #f14a27;
+      background-color: $colorOrange;
       color: $colorBlack;
       text-decoration: none;
       cursor: pointer;
