--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -33,7 +33,6 @@
     &-title {
       margin-bottom: 40px;
       font-family: "Montserrat", sans-serif;
-      font-style: normal;
       font-weight: 700;
       font-size: 36px;
       line-height: 100%;
@@ -46,6 +45,30 @@
 
       @include onDesktop {
         text-align: start;
+      }
+    }
+
+    &__event {
+      margin-bottom: 60px;
+
+      @include onTablet {
+        margin-bottom: 112px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 104px;
+      }
+    }
+
+    &--lection {
+      margin-bottom: 100px;
+
+      @include onTablet {
+        margin-bottom: 88px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 200px;
       }
     }
 
