Lection block was fixed

--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -95,11 +95,13 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
+    text-align: center;
     color: $colorBlack;
     padding-bottom: 20px;
 
     @include onTablet {
       font-size: 36px;
+      text-align: start;
       padding-bottom: 50px;
     }
 
