--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -67,8 +67,8 @@
   &__contacts-us {
     display: inline-block;
     color: inherit;
-    text-decoration: none;
-    @include hover(color, $c-red);
+    text-decoration: underline transparent;
+    @include hover(text-decoration-color, $c-dark);
   }
 
   &__arrow {
@@ -114,7 +114,6 @@
     line-height: 14px;
     border-bottom: 1px solid transparent;
     width: max-content;
-    @include hover(color, $c-red);
 
     &:first-child {
       margin-bottom: 20px;
@@ -122,8 +121,10 @@
   }
 
   &__link {
-    text-decoration: none;
+    position: relative;
     color: inherit;
+    text-decoration: underline transparent;
+    @include hover(text-decoration-color, $c-dark);
   }
 
   &__copyright {
