--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$c-dark:#000;
+$c-black: #0f0e08;
+$c-grin: #1a5a4c;
+$c-grey: #687480;
+$c-dip-grey: #4e4e4e;
+$c-white:  #fff;
+$c-orange:#f14a27;
+
+$c-slider: #e0e0e0;
