--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$c-black: #0f0e08;
+$c-true-black: #000;
+$c-white: #fff;
+$c-green: #1a5a4c;
+$c-grey: #687480;
+$c-orange: #f14a27;
+$size-icon: 24px;
+$size-btn-big: 70px;
+$size-btn-small: 50px;
+$height-menu-mobile: 400px;
+$height-menu-tablet: 224px;
+$height-menu-desktop: 234px;
