--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/grid.scss";
+@import "blocks/icon.scss";
+@import "blocks/logo.scss";
+@import "blocks/button.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/work-time.scss";
+@import "blocks/events.scss";
+@import "blocks/show.scss";
+@import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
+@import "blocks/swiper.scss";
+@import "blocks/subscription.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
+@import "blocks/contacts.scss";
+@import "blocks/line.scss";
