--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,35 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%title {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  color: $c-black;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%event-name {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: $c-grey;
+
+  @include onTablet {
+    font-size: 14px;
+  }
+}
+
+%green-data {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: $c-green;
+
+  @include onTablet {
+    font-size: 14px;
+  }
 }
