--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,23 @@
 $c-gray: #eee;
+$green-color: #1a5a4c;
+$dark-green-color: rgba(26, 90, 76, 0.5);
+$orange-color: #f14a27;
+$white-color: #fff;
+$gray-color: #e0e0e0;
+$dark-gray-color: #4e4e4e;
+$light-gray-color: #687480;
+$black-color: #0f0e08;
+
+$maxMobileWidth: 320px;
+$margin-mob: 20px;
+$margin-tab: 34px;
+$margin-lap: 55px;
+$margin-footer-mob: 40px;
+$button-width-max: 280px;
+
+$footer-border-line: 1px solid rgba(26, 90, 76, 0.5);
+$nav-border-line: 1px solid rgba(255, 255, 255, 0.5);
+$box-shadow: 10px 5px 5px #333;
+$text-shadow: 1px 1px 2px $green-color;
+
+$footer-lap-padding: 65px; // gap + (grid-col(70) / 2)
