--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
+@import "./blocks/page.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/button.scss";
+@import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/span.scss";
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: $black-color;
 }
