--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -30,7 +30,7 @@
       @include laptop {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
       }
     }
@@ -67,9 +67,12 @@
       margin-bottom: 0;
       width: max-content;
 
+      margin-right: 130px;
+
+      transition: all 0.5s ease 0s;
+
       &:hover {
         transform: scale(0.9);
-        transition: all 0.5s ease 0s;
         box-shadow: $box-shadow;
       }
     }
