--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -40,7 +40,7 @@
   }
 
   &__button {
-    margin-left: calc((100vw / 2) - ($button-width-max / 2));
+    margin-left: calc((100vw / 2) - (280px / 2));
 
     @include tablet {
       position: relative;
