--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -9,6 +9,8 @@
   border: 1px solid $green-color;
   text-decoration: none;
 
+  max-width: 270px;
+
   @include tablet {
     height: 70px;
     max-width: 270px;
