--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -58,7 +58,16 @@
     color: $black-color;
 
     @include mobile {
+      width: 130px;
       margin-top: $margin-footer-mob;
+    }
+
+    @include tablet {
+      width: 220px;
+    }
+
+    @include laptop {
+      width: 170px;
     }
   }
 
