--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,10 @@
 .events {
   margin-bottom: 100px;
 
+  @include mobile {
+    margin-bottom: 0;
+  }
+
   &__title {
     display: flex;
     justify-content: center;
@@ -125,7 +129,7 @@
     }
 
     @include laptop {
-      width: max-content;
+      width: 370px;
       max-width: 370px;
       height: 202px;
     }
@@ -139,6 +143,10 @@
     margin-bottom: 15px;
 
     @include tablet {
+      justify-content: flex-start;
+    }
+
+    @include laptop {
       justify-content: flex-start;
     }
 
@@ -176,14 +184,18 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 20px 0;
+    padding: 20px 0 0;
+    margin-bottom: 20px;
     margin-left: 0;
 
     @include tablet {
+      max-width: 460px;
       margin-left: 36px;
+      margin-right: 55px;
     }
 
     @include laptop {
+      max-width: 370px;
       margin-left: 82px;
     }
   }
@@ -191,7 +203,7 @@
   &__event-title {
     width: 129px;
     height: 15px;
-    margin-right: 15px;
+    // margin-right: 15px;
 
     @include text-start (16px, 500, 100%);
 
@@ -231,19 +243,28 @@
     &--3 {
       width: 174px;
       height: 24px;
+
+      @include tablet {
+        width: 220px;
+        height: 22px;
+      }
     }
   }
 
   &__event-name {
-    max-width: 280px;
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
 
     @include title(28px);
     font-weight: 400;
 
     margin-bottom: 10px;
+
+    @include mobile {
+      max-width: 280px;
+      height: 34px;
+    }
 
     @include tablet {
       max-width: max-content;
@@ -259,7 +280,12 @@
       padding-bottom: 20px;
       margin-bottom: 0;
 
+      @include mobile {
+        padding-bottom: 30px;
+      }
+
       @include tablet {
+        max-width: 460px;
         margin-left: 56px;
         text-align: start;
       }
@@ -273,12 +299,21 @@
   }
 
   &__event-name-dot {
+    display: flex;
+    margin-left: 8px;
+
     @include tablet {
       margin-left: 18px;
     }
 
     @include laptop {
       margin-left: 18px;
+    }
+  }
+
+  &__dot {
+    @include mobile {
+      @include square (10px);
     }
   }
 
