--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -65,6 +65,37 @@
   transition: transform 1s;
 }
 
+@mixin museum-button--hover {
+  background-color: $green-color;
+
+  .button__text::before {
+    content: "КУПИТИ";
+    margin-right: 5px;
+  }
+
+  .button__text {
+    color: $white-color;
+  }
+
+  .button__arrow {
+    background-color: $white-color;
+    box-sizing: border-box;
+    border: 1px solid $green-color;
+    transition: background-color 0.5s;
+    color: $green-color;
+  }
+
+  .button__arrow-img {
+    background-image: url(../images/arrow-green.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 2;
+
+    scale: 1.5;
+    transition: scale 0.5s;
+  }
+}
+
 @mixin square ($width-height) {
   width: $width-height;
   height: $width-height;
