--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,6 +8,15 @@
   left: 0;
   right: 0;
 
+  &__burger {
+    padding: 6px;
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.4);
+    }
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
