--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./reset.scss";
+@import "./blocks/animation-scale.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/grid.scss";
+
+@import "./blocks/tickets.scss";
+@import "./blocks/events.scss";
+@import "./blocks/galery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/about.scss";
+@import "./blocks/footer.scss";
