commit #2. fixed bugs

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,7 +5,7 @@
   &__container {
     height: 400px;
     background-color: $color-main-green;
-    opacity: 100%;
+    // opacity: 100%;
 
     @include onDesktopAndTablet {
       display: flex;
@@ -59,13 +59,18 @@
         font-weight: 500;
         font-family: "IBM Plex Sans", sans-serif;
         color: #fff;
-        margin-bottom: 24px;
+        margin-bottom: 4px;
 
         text-align: center;
         height: max-content;
 
+        position: relative;
+        padding: 10px;
+        top: -10px;
+        left: -10px;
+
         @include onDesktop {
-          margin-bottom: 30px;
+          margin-bottom: 10px;
         }
       }
     }
