--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,6 +8,10 @@
       overflow: hidden;
     }
 
+    &--with-galery {
+      overflow-y: hidden;
+    }
+
     @include onDesktopAndTablet {
       position: relative;
     }
