--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -72,13 +72,16 @@
 
     &--contact {
       display: block;
-      width: max-content;
       text-decoration: none;
       font-family: "IBM Plex Sans", sans-serif;
       font-weight: 400;
       font-size: 14px;
       line-height: 150%;
       color: $color-main-black;
+
+      @include onDesktopAndTablet {
+        width: max-content;
+      }
 
       &:hover {
         color: $color-main-green;
@@ -104,7 +107,7 @@
     &--grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 0;
+      gap: 20px;
     }
   }
 
