--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,35 @@
-@import "utils";
+@import "variables.scss";
+@import "mixins.scss";
 @import "fonts";
-@import "typography";
+@import "grid.scss";
+@import "header.scss";
+@import "container.scss";
+@import "menu.scss";
+@import "logo.scss";
+@import "keyframes.scss";
+@import "footer.scss";
+@import "scroll.scss";
+@import "nav.scss";
+@import "section.scss";
+@import "slider.scss";
+@import "form.scss";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
