--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$c-green: #1a5a4c;
+$c-red: #f14a27;
+$c-text-black: #0f0e08;
+$c-text-grey: #4e4e4e;
+$c-text-light-grey:#687480;
+$icon-width: 24px;
