--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils";
+@import "./reset.scss";
+@import "./blocks/grid.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/event.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
