commit #4. fixed bugs

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -125,6 +125,15 @@
       gap: 0;
       position: relative;
       top: -10px;
+
+      &::before {
+        position: absolute;
+        content: "";
+        width: 1px;
+        height: 260px;
+        background-color: rgba(26, 90, 76, 0.5);
+        left: -18%;
+      }
     }
 
     &--link {
