--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -52,6 +52,12 @@
       top: 45px;
       left: 4px;
     }
+
+    @include onMobile {
+      padding: 10px;
+      left: -6px;
+      top: 22px;
+    }
   }
 
   &__title {
