commit #5. Made final changes

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -36,6 +36,7 @@
     &--links {
       display: grid;
       grid-template-columns: 100px 100px;
+
       grid-template-rows: max-content;
       column-gap: 28px;
       padding-top: 16px;
@@ -51,7 +52,8 @@
       
       &--link {
         display: block;
-        width: 100px;
+        width: fit-content;
+        height: max-content;
         text-decoration: none;
         font-size: 16px;
         line-height: 16px;
@@ -60,13 +62,10 @@
         color: #fff;
         margin-bottom: 4px;
 
-        text-align: center;
-        height: max-content;
-
         position: relative;
         padding: 10px;
         top: -10px;
-        left: -10px;
+        // left: -10px;
 
         @include onDesktop {
           margin-bottom: 10px;
