--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,11 +6,23 @@
   color: $c-text-grey;
   scroll-behavior: smooth;
 
+  &__overlay-active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+  }
+
   &__menu {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 10;
 
     transform: translateY(-100%);
     transition: transform 0.3s;
