--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,11 +25,29 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+.body {
   margin: 0;
+
+  &__max-width {
+    max-width: 1280px;
+    margin: 0 auto;
+  }
 }
 
 a {
   text-decoration: none;
   color: #000;
+}
+
+.page__body--with-menu--mobile {
+  overflow: hidden;
+}
+
+.page__overlay-active {
+  background-color: rgba(0,0,0,0.7);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  transition-delay: $animation-duration;
 }
