--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -8,7 +8,7 @@
   }
 
   @include onMobile {
-    margin-top: 270px;
+    margin-top: 210px;
   }
 
   &__box {
@@ -39,6 +39,7 @@
 
   &__line {
     display: flex;
+    align-items: center;
     margin-top: 55px;
 
     &:nth-child(3) {
@@ -96,7 +97,7 @@
 
   &__text {
     width: 370px;
-    margin: 200px 0 0 130px;
+    margin-left: 130px;
     font-family: "IBM Plex Sans", sans-serif;
 
     @include onTablet {
@@ -172,6 +173,10 @@
     margin-top: 100px;
     height: 650px;
 
+    @include onTablet {
+      padding: 0 30px;
+    }
+
     @include onMobile {
       height: 280px;
       margin-top: 60px;
@@ -214,8 +219,9 @@
 
       &-name {
         display: flex;
+        padding: 0 5px;
 
-        justify-content: center;
+        justify-content: space-between;
       }
 
       &-title {
@@ -226,6 +232,7 @@
         text-align: left;
 
         @include onMobile {
+          text-align: center;
           font-size: 28px;
         }
       }
@@ -267,6 +274,9 @@
     margin-top: 200px;
     height: 550px;
     background-image: url(../images/section--4-background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
     @include onTablet {
       margin-top: 90px;
@@ -275,6 +285,8 @@
     }
 
     @include onMobile {
+      background-image: url(../images/section--4-background-mobile.jpg);
+      background-position: top;
       padding: 90px 20px;
     }
 
