--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,6 +7,7 @@
   color: #0f0e08;
 
   padding: 50px 0 35px;
+  overflow: hidden;
 
   &__block {
     display: flex;
@@ -125,6 +126,13 @@
 
     @include onMobile {
       width: 130px;
+    }
+
+    &-links {
+      transition: color $animation-duration;
+      &:hover {
+        color: #f14a27;
+      }
     }
   }
 
