--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  height: 100vh;
+  height: 655px;
 
   @include onTablet {
     height: 385px;
@@ -18,27 +18,36 @@
     @include onMobile {
       width: 100%;
       height: 30vh;
-      margin-top: 399px;
+      margin-top: 320px;
     }
   }
 
   &-background {
     position: absolute;
+    height: 655px;
     right: 0;
-    width: 55%;
-    height: inherit;
+    left: 45%;
     background-image: url(../images/header-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
+    @media (min-width: 1300px) {
+      position: inherit;
+      width: 725px;
+      height: 655px;
+    }
+
     @include onTablet {
-      width: 50%;
+      left: 50%;
+      height: 384px;
       background-image: url(../images/header-background-tablet.jpg);
     }
 
     @include onMobile {
-      width: 100%;
+      height: 300px;
+      left: 0;
+      right: 0;
       background-image: url(../images/header-background-mobilejpg.jpg);
     }
   }
@@ -49,17 +58,19 @@
     line-height: 86px;
     margin-top: 25%;
 
-    @include onTablet {
+    @media (max-width:1100px) {
       font-size: 54px;
       line-height: 65px;
       margin-top: 130px;
     }
 
-    @include onMobile {
+    @media (max-width:800px) {
       font-size: 45px;
       line-height: 45px;
-      text-align: center;
+    }
 
+    @include onMobile {
+      text-align: center;
       margin: 20px auto;
     }
   }
