--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
+@import "./utils/variables";
+
+@import "./blocks/logo.scss";
+@import "./blocks/button.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  color: $c-main;
+}
 
 body {
-  background: $c-gray;
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
