added Swiperjs to gallery

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/swiper.scss";
 
 
 * {
