--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./variables";
+@import "./reset";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/logo.scss";
+@import "./blocks/icon.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
