--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,7 +1,4 @@
 .button {
-  $button-arrow-size: 50px;
-  display: flex;
-
   display: grid;
   grid-template-columns: 1fr $button-arrow-size;
   align-items: center;
@@ -12,6 +9,16 @@
   text-decoration: none;
 
   border: 1px solid $c-greenny;
+  transition: 0.3s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $c-greenny-trnst;
+  }
+
+  &:active {
+    background-color: $c-greenny;
+  }
 
   &__title {
     display: block;
