--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,8 @@
 $c-main: #0f0e08;
 $c-reddy: #f14a27;
 $c-greenny: #1a5a4c;
+$c-greenny-trnst: #1a5a4c90;
 
 $content-padding: 20px;
+$button-arrow-size: 50px;
+
