--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "./blocks/lecture.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
+@import "./blocks/subscription.scss";
 
 
 * {
