--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,3 +1,9 @@
 .container {
-  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 1170px;
+  padding: 9px 20px 0;
+
+  @include onDesktop {
+    padding: 15px 55px 0;
+  }
 }
