--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
-@import "./variables";
+@import "./mixins";
 @import "./reset";
+@import "./variables";
 
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
+@import "./blocks/container.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
