--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -83,6 +83,8 @@
     font-size: 14px;
     max-width: 130px;
 
+    margin: 0 0 20px;
+
     @include onTablet {
       max-width: 220px;
     }
@@ -94,8 +96,6 @@
     color: #000;
     max-width: 130px;
     transition: 0.3s;
-
-    margin: 20px 0 0;
 
     @include onTablet {
       max-width: 220px;
