mobile footer done

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -6,6 +6,8 @@
   align-items: center;
   text-align: center;
 
+  margin-bottom: 50px;
+
   background-image: url(../images/Rectangle-22.png);
   background-size: cover;
   background-position: center;
