--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,8 @@
 
 @import "./blocks/logo.scss";
 @import "./blocks/button.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/events.scss";
@@ -13,12 +15,16 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/subscription.scss";
-
+@import "./blocks/footer.scss";
 
 * {
   box-sizing: border-box;
   margin: 0;
   color: $c-main;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
